--- a/frontend/src/styles/scss/style.scss
+++ b/frontend/src/styles/scss/style.scss
@@ -14,8 +14,7 @@
 @import "./components/rentGallery";
 // dropdown
 @import "./components/dropdown";
-
+// error page
 @import "./page/error";
-
 // footer
 @import "./components/footer";
