--- a/frontend/src/styles/scss/page/_about.scss
+++ b/frontend/src/styles/scss/page/_about.scss
@@ -1,4 +1,5 @@
 .about-list {
+	margin-top: 55px;
 	div {
 		margin-left: auto;
 		margin-right: auto;
@@ -7,5 +8,4 @@
 			width: initial;
 		}
 	}
-	margin-bottom: 20px;
 }
