--- a/frontend/src/styles/scss/style.scss
+++ b/frontend/src/styles/scss/style.scss
@@ -10,6 +10,7 @@
 @import "./page/about";
 @import "./components//aboutBanner";
 // rent page
+@import "./page/rent";
 @import "./components/getRent";
 @import "./components/rentGallery";
 // dropdown
