--- a/frontend/src/styles/scss/page/_about.scss
+++ b/frontend/src/styles/scss/page/_about.scss
@@ -2,7 +2,9 @@
 	animation: pageAnim forwards 650ms;
 
 	.about-list {
+		margin-bottom: 55px;
 		margin-top: 55px;
+
 		div {
 			margin-left: auto;
 			margin-right: auto;
