--- a/frontend/src/styles/css/style.css
+++ b/frontend/src/styles/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .content {
-  flex: 1 0 auto;
+  flex: 1 0;
 }
 
 nav {
@@ -76,8 +76,15 @@ nav li:hover {
   flex-wrap: wrap;
   margin-bottom: 50px;
 }
+@media screen and (max-width: 820px) {
+  .home-page .home-container {
+    background-color: inherit;
+    padding: inherit;
+  }
+}
 @media screen and (max-width: 1220px) {
   .home-page .home-container {
+    justify-content: center;
     gap: 30px;
     row-gap: 50px;
   }
@@ -155,6 +162,12 @@ nav li:hover {
   border-radius: 10px;
   max-width: 340px;
 }
+@media screen and (max-width: 820px) {
+  .card-container .card {
+    max-width: 450px;
+    width: 100%;
+  }
+}
 .card-container .card:hover {
   cursor: pointer;
 }
@@ -178,6 +191,7 @@ nav li:hover {
   animation: pageAnim forwards 650ms;
 }
 .about-page .about-list {
+  margin-bottom: 55px;
   margin-top: 55px;
 }
 .about-page .about-list div {
@@ -230,8 +244,13 @@ nav li:hover {
   margin-top: 20px;
 }
 .rent-container .rent-information {
-  margin-top: -25px;
+  margin-top: -110px;
   text-align: left;
+}
+@media screen and (max-width: 425px) {
+  .rent-container .rent-information {
+    margin-top: -70px;
+  }
 }
 .rent-container .rent-information .flex {
   display: flex;
@@ -259,7 +278,7 @@ nav li:hover {
   }
 }
 .rent-container .rent-information .flex .user-info-desktop div {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 10px;
   display: flex;
   gap: 10px;
@@ -327,6 +346,7 @@ nav li:hover {
   }
   .rent-container .rent-information .user-info-mobile .rating {
     margin-top: 15px;
+    padding-right: 10px;
   }
 }
 .rent-container .collapse-container {
@@ -361,13 +381,29 @@ nav li:hover {
   object-position: 50% 50%;
   border-radius: 25px;
 }
+@media screen and (max-width: 425px) {
+  .rent-container .gallery-img {
+    height: 315px;
+  }
+}
 .rent-container .sliders-container {
   display: flex;
   justify-content: space-between;
-  margin-top: -300px;
-  margin-bottom: 225px;
-  padding-left: 15px;
-  padding-right: 15px;
+  position: relative;
+  top: -300px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.rent-container .sliders-container.not-visible {
+  visibility: hidden;
+}
+@media screen and (max-width: 425px) {
+  .rent-container .sliders-container {
+    top: -180px;
+  }
+  .rent-container .sliders-container .arrow {
+    width: 25px;
+  }
 }
 .rent-container .sliders-container button {
   border: none;
@@ -388,9 +424,20 @@ nav li:hover {
 .rent-container .index {
   color: white;
   position: relative;
-  top: -42px;
+  top: -120px;
   text-align: center;
   font-weight: bold;
+}
+@media screen and (max-width: 425px) {
+  .rent-container .index {
+    top: -85px;
+  }
+  .rent-container .index .arrow {
+    width: 25px;
+  }
+}
+.rent-container .index.not-visible {
+  visibility: hidden;
 }
 
 .dropdown-container {
@@ -440,6 +487,11 @@ nav li:hover {
   color: #ff6060;
   font-size: 1.2rem;
   padding: 12px;
+}
+@media screen and (max-width: 405px) {
+  .dropdown-container .dropdown-content p {
+    font-size: 1rem;
+  }
 }
 .dropdown-container .dropdown-content ul {
   padding-top: 12px;
@@ -503,8 +555,11 @@ nav li:hover {
 
 .footer-container {
   background-color: black;
+  margin-top: auto;
   text-align: center;
   padding: 20px;
+  margin-left: -15px;
+  margin-right: -15px;
   flex-shrink: 0;
 }
 .footer-container img {
