--- a/frontend/src/styles/scss/base/_app.scss
+++ b/frontend/src/styles/scss/base/_app.scss
@@ -2,6 +2,7 @@ body {
 	margin-left: 15px;
 	margin-right: 15px;
 }
+
 .app {
 	margin: 60px auto;
 	max-width: 1340px;
@@ -15,5 +16,5 @@ body {
 }
 
 .content {
-	flex: 1 0 auto;
+	flex: 1 0;
 }
