--- a/frontend/src/styles/scss/components/_footer.scss
+++ b/frontend/src/styles/scss/components/_footer.scss
@@ -1,8 +1,10 @@
 .footer-container {
 	background-color: black;
+	margin-top: auto;
 	text-align: center;
 	padding: 20px;
-
+	margin-left: -15px;
+	margin-right: -15px;
 	flex-shrink: 0;
 
 	img {
