--- a/frontend/src/styles/scss/components/_rentGallery.scss
+++ b/frontend/src/styles/scss/components/_rentGallery.scss
@@ -5,15 +5,26 @@
 		object-fit: cover;
 		object-position: 50% 50%;
 		border-radius: 25px;
+		@media screen and (max-width: 425px) {
+			height: 315px;
+		}
 	}
 	.sliders-container {
 		display: flex;
 		justify-content: space-between;
-		margin-top: -300px;
-		margin-bottom: 225px;
-		padding-left: 15px;
-		padding-right: 15px;
-
+		position: relative;
+		top: -300px;
+		padding-left: 10px;
+		padding-right: 10px;
+		&.not-visible {
+			visibility: hidden;
+		}
+		@media screen and (max-width: 425px) {
+			top: -180px;
+			.arrow {
+				width: 25px;
+			}
+		}
 		button {
 			border: none;
 			background: none;
@@ -35,8 +46,17 @@
 	.index {
 		color: white;
 		position: relative;
-		top: -42px;
+		top: -120px;
 		text-align: center;
 		font-weight: bold;
+		@media screen and (max-width: 425px) {
+			top: -85px;
+			.arrow {
+				width: 25px;
+			}
+		}
+		&.not-visible {
+			visibility: hidden;
+		}
 	}
 }
