--- a/frontend/src/styles/scss/components/_rentsList.scss
+++ b/frontend/src/styles/scss/components/_rentsList.scss
@@ -9,6 +9,10 @@
 	.card {
 		border-radius: 10px;
 		max-width: 340px;
+		@media screen and(max-width: 820px) {
+			max-width: 450px;
+			width: 100%;
+		}
 		&:hover {
 			cursor: pointer;
 		}
