--- a/frontend/src/styles/scss/page/_home.scss
+++ b/frontend/src/styles/scss/page/_home.scss
@@ -11,7 +11,12 @@
 		padding: 40px;
 		flex-wrap: wrap;
 		margin-bottom: 50px;
+		@media screen and(max-width: 820px) {
+			background-color: inherit;
+			padding: inherit;
+		}
 		@media screen and(max-width: 1220px) {
+			justify-content: center;
 			gap: 30px;
 			row-gap: 50px;
 		}
