--- a/frontend/src/styles/scss/components/_getRent.scss
+++ b/frontend/src/styles/scss/components/_getRent.scss
@@ -59,11 +59,13 @@
 				}
 			}
 			.tags {
-				display: flex;
 				margin-left: -40px;
-				flex-wrap: wrap;
+
 				ul {
 					list-style-type: none;
+					display: flex;
+					gap: 10px;
+					flex-wrap: wrap;
 				}
 
 				li {
@@ -72,8 +74,8 @@
 					background-color: #ff6060;
 					padding: 5px;
 					border-radius: 12px;
-					width: 100%;
 					min-width: 130px;
+					font-size: 0.9rem;
 				}
 			}
 		}
