--- a/frontend/src/styles/scss/components/_homeBanner.scss
+++ b/frontend/src/styles/scss/components/_homeBanner.scss
@@ -19,6 +19,9 @@
 		@media screen and (max-width: 490px) {
 			margin-top: -180px;
 		}
+		@media screen and (max-width: 525px) {
+			margin-top: -180px;
+		}
 		h1 {
 			filter: brightness(100%);
 			color: white;
@@ -31,7 +34,7 @@
 			@media screen and (max-width: 620px) {
 				font-size: 2rem;
 			}
-			@media screen and (max-width: 425px) {
+			@media screen and (max-width: 525px) {
 				text-align: left;
 				padding-left: 10px;
 				font-size: 1.8rem;
